# auto-stream-plugin1

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
